--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,8 @@
 pipeline
 {
-agen any
-
+agent any
+stages
+{
 stage("scm checkout")
     {
         steps
@@ -9,4 +10,6 @@ stage("scm checkout")
             git branch: 'master', url: 'https://github.com/sahilkale-devops/mavenprojectpipeline.git'
         }
     }
+}
+
 }
