--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,13 +3,21 @@ pipeline
 agent any
 stages
 {
-stage("scm checkout")
+    stage("scm checkout")
     {
-        steps
-        {
-            git branch: 'master', url: 'https://github.com/sahilkale-devops/mavenprojectpipeline.git'
-        }
+     steps { git branch: 'master', url: 'https://github.com/sahilkale-devops/mavenprojectpipeline.git' }
+     
     }
-}
+    stage("code copile")
+    {
+        steps{ withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+         {
+            sh 'mvn compile'
+         }
+
+    }
+    }
+
+  }
 
 }
