--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,6 +11,33 @@ pipeline
 
             }
         }
+        stage("compile the code")
+        {
+            steps
+            {
+               
+                withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+                {sh 'mvn compile'}
+            }
+        }
+
+        stage("unit test framework")
+        {
+            steps
+            {
+                withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+                {sh 'mvn test'}
+            }
+        }
+        
+        stage("code build")
+        {
+            steps
+            {
+                withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+                {sh 'mvn package'}
+            }
+        }
         
          
         
