--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline
             steps
             {
                
-                withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+                withMaven(globalMavenSettingsConfig: '', jdk: 'JAVA_PATH', maven: 'MAVEN_PATH', mavenSettingsConfig: '', traceability: true)
                 {sh 'mvn compile'}
             }
         }
@@ -25,7 +25,7 @@ pipeline
         {
             steps
             {
-                withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+                withMaven(globalMavenSettingsConfig: '', jdk: 'JAVA_PATH', maven: 'MAVEN_PATH', mavenSettingsConfig: '', traceability: true)
                 {sh 'mvn test'}
             }
         }
@@ -34,7 +34,7 @@ pipeline
         {
             steps
             {
-                withMaven(globalMavenSettingsConfig: '', jdk: 'JDK_home', maven: 'Maven_home', mavenSettingsConfig: '', traceability: true)
+                withMaven(globalMavenSettingsConfig: '', jdk: 'JAVA_PATH', maven: 'MAVEN_PATH', mavenSettingsConfig: '', traceability: true)
                 {sh 'mvn package'}
             }
         }
