--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,7 +42,7 @@ pipeline
         {
             steps
             {
-                sshagent(['deploytoserver'])
+                sshagent(['Deploytoserver'])
                 {
                     sh 'scp -o StrictHostKeyChecking=no webapp/target/webapp.war ec2-user@172.31.43.58:/usr/share/tomcat/webapps'
                 }
